<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/header_text_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp">

        <Button
            style="@style/settingButton"
            android:id="@+id/parameterDefining"
            android:text="@string/properitiesDefining"
            />

        <Button
            style="@style/settingButton"
            android:id="@+id/otaButton"
            android:text="@string/OTAUpgrade"
            />

        <Button
            style="@style/settingButton"
            android:id="@+id/wifiButton"
            android:text="@string/wifi_setting_text"
            android:visibility="gone"
            />

        <Button
            style="@style/settingButton"
            android:id="@+id/quickConnection"
            android:text="@string/quickConnection"
            android:visibility="gone"
            />
        <Button
            android:visibility="gone"
            style="@style/settingButton"
            android:id="@+id/shareButton"
            android:text="日志分享"
            />

    </LinearLayout>
    <include layout="@layout/footer"/>
</LinearLayout>
