<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/communication_button_LL"
            style="@style/Communicate_Setting_About_LL">

            <ImageView
                android:id="@+id/communication_button"
                style="@style/Communicate_Setting_About_IV"
                android:src="@drawable/communication_off" />

            <TextView
                android:id="@+id/communication_button_text"
                style="@style/Communicate_Setting_About_TV"
                android:text="@string/communication" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting_button_LL"
            style="@style/Communicate_Setting_About_LL">

            <ImageView
                android:id="@+id/setting_button"
                style="@style/Communicate_Setting_About_IV"
                android:src="@drawable/setting_off" />

            <TextView
                android:id="@+id/setting_button_text"
                style="@style/Communicate_Setting_About_TV"
                android:text="@string/setting" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/store_button_LL"
            style="@style/Communicate_Setting_About_LL">

            <ImageView
                android:id="@+id/store_button"
                style="@style/Communicate_Setting_About_IV"
                android:src="@drawable/store_off" />

            <TextView
                android:id="@+id/store_button_text"
                style="@style/Communicate_Setting_About_TV"
                android:text="@string/store" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_button_LL"
            style="@style/Communicate_Setting_About_LL">

            <ImageView
                android:id="@+id/about_button"
                style="@style/Communicate_Setting_About_IV"
                android:src="@drawable/about_off" />

            <TextView
                android:id="@+id/about_button_text"
                style="@style/Communicate_Setting_About_TV"
                android:text="@string/about" />
        </LinearLayout>


    </LinearLayout>
</merge>