<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/header_ota_text"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/otaState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:textSize="18dp"
            android:text="@string/pleaseSelectTheFirmware" />

        <ProgressBar
            android:id="@+id/otaProgress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/otaState"
            android:layout_marginTop="15dp"
            android:layout_marginRight="8dp"
            android:visibility="invisible"
            android:layout_toStartOf="@+id/progressCount"
            android:layout_toLeftOf="@+id/progressCount" />

        <TextView
            android:id="@+id/progressCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="0 %"
            android:layout_alignBottom="@+id/otaProgress"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/timeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/otaState"
            android:visibility="invisible"
            android:text="0 S" />

        <Button
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_below="@+id/progressCount"
            android:layout_marginLeft="8dp"
            android:background="@drawable/file"
            android:id="@+id/selectFile" />

        <TextView
            android:id="@+id/open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/selectFile"
            android:layout_alignBaseline="@+id/selectFile"
            android:text="@string/openFile"/>

        <Button
            android:layout_marginLeft="8dp"
            android:id="@+id/download"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_below="@+id/progressCount"
            android:layout_toEndOf="@+id/open"
            android:background="@drawable/download" />

        <TextView
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/download"
            android:layout_alignBaseline="@+id/download"
            android:text="@string/downloadFile"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectedFirmware"
            android:layout_below="@+id/selectFile"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/fileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notToChoose"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:layout_alignBaseline="@+id/textView"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"

            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="37dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=" " />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toLeftOf="@+id/tv_soft_verson"
                        android:layout_toStartOf="@+id/tv_soft_verson"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/type" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toLeftOf="@+id/tv_soft_type_modelName"
                        android:layout_toStartOf="@+id/tv_soft_type_modelName"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/versionApp" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toLeftOf="@+id/tv_soft_bootloader"
                        android:layout_toStartOf="@+id/tv_soft_bootloader"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/bootLoader" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="43dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_weight="1"
                        android:text="@string/module" />

                    <TextView
                        android:id="@+id/moduleModelName"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/textView15"
                        android:layout_toRightOf="@+id/textView15"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="-" />

                    <TextView
                        android:id="@+id/moduleVersion"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/textView6"
                        android:layout_toRightOf="@+id/textView6"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="-" />

                    <TextView
                        android:id="@+id/moduleBootloader"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/textView10"
                        android:layout_toRightOf="@+id/textView10"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="-" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_weight="1"
                        android:text="@string/firmware" />

                    <TextView
                        android:id="@+id/dfuModelName"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="-" />

                    <TextView
                        android:id="@+id/dfuVersion"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="-" />

                    <TextView
                        android:id="@+id/dfuBootloader"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="-" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
        <Button
            android:id="@+id/updateBegin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:textAllCaps="false"
            android:padding="2dp"
            android:background="@drawable/btn_background_default_hightlight"
            android:text="@string/toUpgrade" />

        <CheckBox
            android:id="@+id/resetFlag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/updateBegin"
            android:layout_marginBottom="20dp"
            android:text="@string/restoreTheFactorySettings" />

        <CheckBox
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/resetFlag"
            android:layout_marginBottom="20dp"
            android:text="@string/pairing_record" />

    </RelativeLayout>


</LinearLayout>
